--- a/package.json
+++ b/package.json
@@ -4,12 +4,24 @@
   "private": true,
   "homepage": "https://dinhvando.github.io/covid19-tracker",
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@react-leaflet/core": "^1.0.2",
+    "@reduxjs/toolkit": "^1.6.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "chart.js": "^3.3.2",
+    "classnames": "^2.3.1",
+    "leaflet": "^1.7.1",
+    "numeral": "^2.0.6",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
+    "react-leaflet": "^3.1.0",
+    "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -26,18 +38,11 @@
       "react-app/jest"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ],
   "devDependencies": {
     "gh-pages": "^3.2.3"
   }
